[tool.poetry]
name = "jupyter-utils-tddschn"
version = "0.1.0"
description = ""
authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.2.0"
ipykernel = "^6.13.0"
nbformat = "^5.3.0"
Pygments = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.32.0"
toml = "^0.10.2"
bump2version = "^1.0.1"
better-exceptions = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
