[tool.poetry]
name = "jupyter-utils-tddschn"
version = "0.1.6"
description = ""
authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tddschn/jupyter-utils-tddschn"
repository = "https://github.com/tddschn/jupyter-utils-tddschn"
keywords = ["jupyter", "notebook", "utility"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/jupyter-utils-tddschn/issues"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.2.0"
ipykernel = "^6.13.0"
nbformat = "^5.3.0"
Pygments = "^2.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
yapf = "^0.32.0"
toml = "^0.10.2"
bump2version = "^1.0.1"
better-exceptions = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
